[gd_scene load_steps=19 format=3 uid="uid://crnuwgiiri5ix"]

[ext_resource type="Script" uid="uid://dgeuotcndp8ym" path="res://Player/player.gd" id="1_l8h54"]
[ext_resource type="Script" uid="uid://kfo6xjkr7oc3" path="res://Player/camera.gd" id="2_4ntmi"]
[ext_resource type="PackedScene" uid="uid://bmr2d5oo2pfgy" path="res://Assets/character_model/character_model.tscn" id="2_gu6f8"]
[ext_resource type="Script" uid="uid://dn7nx33rllxbn" path="res://Player/StateMachine/PlayerStateMachine/player_state_machine.gd" id="3_vtle1"]
[ext_resource type="Script" uid="uid://xop3ims3663j" path="res://Player/StateMachine/PlayerStateMachine/States/idle.gd" id="4_od3ui"]
[ext_resource type="Script" uid="uid://cqa85skjb128t" path="res://Player/movement_stats.gd" id="4_p5o4e"]
[ext_resource type="Script" uid="uid://yyl34jowi0wg" path="res://Player/StateMachine/PlayerStateMachine/States/run.gd" id="5_00tjw"]
[ext_resource type="Script" uid="uid://bp2k3ml7ghuct" path="res://Player/StateMachine/PlayerStateMachine/States/aim_idle.gd" id="6_5htga"]
[ext_resource type="Script" uid="uid://tx0wgvycmt78" path="res://Player/StateMachine/PlayerStateMachine/States/sprint.gd" id="6_od3ui"]
[ext_resource type="Script" uid="uid://dponbwsoalksr" path="res://Player/StateMachine/PlayerStateMachine/States/jump.gd" id="6_x3vf3"]
[ext_resource type="Script" uid="uid://b6ce6ue3em67d" path="res://Player/StateMachine/PlayerStateMachine/States/fall.gd" id="7_apopc"]
[ext_resource type="Script" uid="uid://i3vd7yudbjl" path="res://Player/StateMachine/PlayerStateMachine/States/aim_walk.gd" id="7_p5o4e"]
[ext_resource type="Script" uid="uid://boixgxxo3cmbt" path="res://Player/StateMachine/PlayerStateMachine/States/sprint_jump.gd" id="9_x3vf3"]
[ext_resource type="Script" uid="uid://c6i750c1wftes" path="res://Player/StateMachine/PlayerStateMachine/States/sprint_fall.gd" id="10_apopc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_62w18"]
radius = 0.5830078
height = 1.9224854

[sub_resource type="SphereShape3D" id="SphereShape3D_4ntmi"]
margin = 0.01

[sub_resource type="SphereShape3D" id="SphereShape3D_btcbx"]
margin = 0.01
radius = 0.1

[sub_resource type="Resource" id="Resource_gu6f8"]
script = ExtResource("4_p5o4e")
time_to_jump_apex = 0.6
time_to_land = 0.4
metadata/_custom_type_script = "uid://cqa85skjb128t"

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_l8h54")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9447529, 0)
shape = SubResource("CapsuleShape3D_62w18")

[node name="CharacterModel" parent="." instance=ExtResource("2_gu6f8")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="Camera" type="Node3D" parent="." node_paths=PackedStringArray("character", "edge_spring_arm", "rear_spring_arm", "camera")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("2_4ntmi")
character = NodePath("..")
edge_spring_arm = NodePath("EdgeSpringArm")
rear_spring_arm = NodePath("EdgeSpringArm/RearSpringArm")
camera = NodePath("EdgeSpringArm/RearSpringArm/Camera3D")
aim_rear_spring_length = 0.3
aim_edge_spring_length = 0.3

[node name="EdgeSpringArm" type="SpringArm3D" parent="Camera"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0, 0)
shape = SubResource("SphereShape3D_4ntmi")
spring_length = 0.5

[node name="RearSpringArm" type="SpringArm3D" parent="Camera/EdgeSpringArm"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, 0)
shape = SubResource("SphereShape3D_btcbx")

[node name="Camera3D" type="Camera3D" parent="Camera/EdgeSpringArm/RearSpringArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 1)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("character_model", "start_state")]
script = ExtResource("3_vtle1")
player_movement_stats = SubResource("Resource_gu6f8")
character_model = NodePath("../CharacterModel")
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_od3ui")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("5_00tjw")

[node name="AimIdle" type="Node" parent="StateMachine"]
script = ExtResource("6_5htga")

[node name="AimWalk" type="Node" parent="StateMachine"]
script = ExtResource("7_p5o4e")

[node name="Sprint" type="Node" parent="StateMachine"]
script = ExtResource("6_od3ui")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("6_x3vf3")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("7_apopc")

[node name="SprintJump" type="Node" parent="StateMachine"]
script = ExtResource("9_x3vf3")

[node name="SprintFall" type="Node" parent="StateMachine"]
script = ExtResource("10_apopc")

[connection signal="aim_entered" from="StateMachine/AimIdle" to="Camera" method="_on_aim_entered"]
[connection signal="aim_exited" from="StateMachine/AimIdle" to="Camera" method="_on_aim_exited"]
[connection signal="aim_entered" from="StateMachine/AimWalk" to="Camera" method="_on_aim_entered"]
[connection signal="aim_exited" from="StateMachine/AimWalk" to="Camera" method="_on_aim_exited"]
[connection signal="sprint_ended" from="StateMachine/Sprint" to="Camera" method="_on_sprint_ended"]
[connection signal="sprint_started" from="StateMachine/Sprint" to="Camera" method="_on_sprint_sprint_started"]
[connection signal="sprint_ended" from="StateMachine/SprintFall" to="Camera" method="_on_sprint_ended"]
